feat: 引入 ES + Milvus 混合检索双知识库架构
核心能力：
- 双路并行检索：ES 全文（BM25）+ Milvus 向量（余弦相似度）+ RRF 融合排序
- 三级熔断降级：ES/Milvus/Hybrid 独立熔断 → MySQL 向量 → MySQL 文本
- SPI 可插拔扩展：HybridStoreProvider 接口，支持多后端热替换
- 异步向量化流水线：@Async + 线程池 + 指数退避重试（最多 5 次）
- Chunk 级长期记忆：细粒度召回追踪 + 文件级聚合评分
- MCP 知识检索工具：knowledge_retrieval 供 Agent 自主调用
- 数据一致性保障：@Transactional + @Retryable 三端同步

新增模块：
- hybrid/   — 混合检索核心（SPI、Provider×3、Manager、Service×5、Tool、Util）
- wiki/service/HybridRetriever.java       — RRF 融合检索器
- wiki/model/EmbeddingTaskEntity.java      — 嵌入重试任务实体
- wiki/repository/EmbeddingTaskMapper.java — 嵌入任务 Mapper

配置：
- pom.xml: 新增 elasticsearch-java 8.17.4、milvus-sdk-java 2.4.14
- application.yml: 新增 mate.hybrid.* 配置段
- db/migration: V100__embedding_task.sql (H2 + MySQL)

修改现有：
- MemoryRecallService: 新增 recordChunkRecall() + computeScoresWithChunkAggregation()
- HybridRetriever: 新增 retrieveAndRecord() Chunk 召回集成