@@ -2,435 +2,387 @@ package vip.mate.wiki.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import vip.mate.wiki.WikiProperties;
-import vip.mate.wiki.dto.ImageRef;
-import vip.mate.wiki.dto.PageSearchResult;
-import vip.mate.wiki.dto.RelatedPageResult;
-import vip.mate.wiki.dto.WikiPageLite;
-import vip.mate.wiki.metrics.WikiMetrics;
-import vip.mate.wiki.model.WikiChunkEntity;
-import vip.mate.wiki.model.WikiPageEntity;
-import vip.mate.wiki.repository.WikiPageMapper;
-import vip.mate.wiki.retrieval.SnippetExtractor;
+import vip.mate.memory.service.MemoryRecallService;
+import vip.mate.hybrid.provider.FallbackHybridStoreProvider;
+import vip.mate.hybrid.service.ElasticsearchSyncService;
+import vip.mate.hybrid.service.MilvusAsyncEmbeddingService;
+import vip.mate.hybrid.spi.HybridStoreProvider;
+import vip.mate.hybrid.util.CircuitBreaker;
 
-import java.time.Duration;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 /**
- * RFC-011 + RFC-032: Hybrid retrieval service.
+ * 混合检索器。
  * <p>
- * Three search modes: keyword (DB LIKE), semantic (chunk vectors),
- * hybrid (RRF fusion). RFC-032 adds: N+1 fix, two-phase keyword search,
- * relation boost, snippet extraction, and PageSearchResult DTO.
+ * 核心能力：
+ * <ul>
+ *   <li>并行检索：ES 全文检索 + Milvus 向量检索（CompletableFuture 并发）</li>
+ *   <li>RRF (Reciprocal Rank Fusion) 融合排序：score = Σ 1/(k + rank_i)，k=60</li>
+ *   <li>三级熔断器：ES / Milvus / Hybrid 各自独立熔断</li>
+ *   <li>完整降级链路：ES + Milvus → 单路 → MySQL 向量 → MySQL 文本</li>
+ *   <li>检索结果去重：基于 content 前 100 字符 hashCode</li>
+ * </ul>
+ *
+ * @author MateClaw Team
  */
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class HybridRetriever {
 
-    private final WikiPageService pageService;
-    private final WikiChunkService chunkService;
-    private final WikiEmbeddingService embeddingService;
-    private final WikiProperties properties;
-    private final WikiPageMapper pageMapper;
-    private final WikiMetrics metrics;
-    private final WikiContentNormalizer contentNormalizer;
+    private final ElasticsearchSyncService esService;
+    private final MilvusAsyncEmbeddingService milvusService;
+    private final FallbackHybridStoreProvider fallbackProvider;
+    private final MemoryRecallService memoryRecallService;
 
-    @Autowired(required = false)
-    private WikiRelationService relationService;
+    /** 各组件独立熔断器 */
+    private final CircuitBreaker esCircuitBreaker = new CircuitBreaker("ES", 3, 60_000);
+    private final CircuitBreaker milvusCircuitBreaker = new CircuitBreaker("Milvus", 3, 60_000);
+    private final CircuitBreaker hybridCircuitBreaker = new CircuitBreaker("Hybrid", 3, 60_000);
 
-    private static final double RELATION_BOOST = 0.15;
+    /** RRF 参数 k */
+    private static final int RRF_K = 60;
 
-    /** Cap how many image references one search hit carries — large pages can have
-     *  dozens; we only need a couple of thumbnails for the result panel. */
-    private static final int MAX_IMAGE_REFS_PER_HIT = 3;
+    /** 并行检索超时 */
+    private static final long SEARCH_TIMEOUT_SECONDS = 30;
 
-    public HybridRetriever(WikiPageService pageService,
-                            WikiChunkService chunkService,
-                            WikiEmbeddingService embeddingService,
-                            WikiProperties properties,
-                            WikiPageMapper pageMapper,
-                            WikiMetrics metrics,
-                            WikiContentNormalizer contentNormalizer) {
-        this.pageService = pageService;
-        this.chunkService = chunkService;
-        this.embeddingService = embeddingService;
-        this.properties = properties;
-        this.pageMapper = pageMapper;
-        this.metrics = metrics;
-        this.contentNormalizer = contentNormalizer;
-    }
-
-    public enum Mode { KEYWORD, SEMANTIC, HYBRID }
-
-    /**
-     * Legacy page hit record (kept for backward compatibility).
-     */
-    public record PageHit(Long pageId, String slug, String title, String summary, double score) {}
-
-    /**
-     * Chunk-level search result (semantic search).
-     * <p>
-     * RFC-051 PR-1c: {@code pageNumber} and {@code headerBreadcrumb} are
-     * populated when the chunk has those columns set (lazy ingest with
-     * preprocessor on, or backfilled chunks). Both are nullable.
-     */
-    public record ChunkHit(Long chunkId, Long rawId, String snippet, float score,
-                            Integer pageNumber, String headerBreadcrumb) {
-
-        /** Backwards-compatible factory for callers that don't yet pass metadata. */
-        public ChunkHit(Long chunkId, Long rawId, String snippet, float score) {
-            this(chunkId, rawId, snippet, score, null, null);
-        }
+    public enum RetrievalMode {
+        /** 仅 Elasticsearch 全文检索 */
+        ES_ONLY,
+        /** 仅 Milvus 向量检索 */
+        VECTOR_ONLY,
+        /** 混合检索（融合 ES + Milvus 结果） */
+        HYBRID
     }
 
     /**
-     * RFC-032: Enhanced search returning PageSearchResult with snippet and matchedBy metadata.
+     * 执行混合检索。
+     *
+     * @param workspaceId 工作空间 ID
+     * @param query       查询文本
+     * @param topK        返回结果数
+     * @param mode        检索模式
+     * @return 混合检索结果
      */
-    public List<PageSearchResult> search(Long kbId, String query, String modeStr, int topK) {
-        Mode mode = parseMode(modeStr);
+    public HybridResult retrieve(Long workspaceId, String query, int topK, RetrievalMode mode) {
+        log.info("[HybridRetriever] Mode={}, ES state={}, Milvus state={}",
+                mode, esCircuitBreaker.getState(), milvusCircuitBreaker.getState());
 
-        long startNanos = System.nanoTime();
-
-        List<RankedItem> semantic = List.of();
-        List<RankedItem> keyword = List.of();
-
-        if (mode != Mode.KEYWORD && embeddingService.isAvailable()) {
-            semantic = semanticSearch(kbId, query, topK * 3);
-        }
-        if (mode != Mode.SEMANTIC) {
-            keyword = keywordSearch(kbId, query, topK * 3);
+        // 全链路熔断 → 直接降级到 MySQL
+        if (hybridCircuitBreaker.shouldFallback()) {
+            log.warn("[HybridRetriever] Hybrid circuit breaker OPEN, using full fallback");
+            List<SearchHit> fallbackHits = executeFullFallback(workspaceId, query, topK);
+            return new HybridResult(fallbackHits, 0, 0, true);
         }
 
-        if (mode == Mode.SEMANTIC && semantic.isEmpty()) {
-            keyword = keywordSearch(kbId, query, topK * 3);
-        }
+        // 并行触发 ES + Milvus
+        List<SearchHit> esHits = List.of();
+        List<SearchHit> vectorHits = List.of();
+        boolean esSuccess = false;
+        boolean milvusSuccess = false;
+        boolean fallbackUsed = false;
 
-        List<RankedItem> fused;
-        if (mode == Mode.KEYWORD || semantic.isEmpty()) {
-            fused = keyword;
-        } else if (mode == Mode.SEMANTIC) {
-            fused = semantic;
-        } else {
-            fused = rrfFuse(semantic, keyword, 60);
-        }
+        CompletableFuture<List<SearchHit>> esFuture = CompletableFuture.supplyAsync(() -> {
+            if (mode == RetrievalMode.VECTOR_ONLY) return List.of();
 
-        // RFC-032: Relation boost (1-hop expansion on top-3 seeds)
-        fused = applyRelationBoost(fused, kbId, topK);
+            if (esCircuitBreaker.shouldFallback()) {
+                log.warn("[HybridRetriever] ES circuit breaker OPEN, skipping ES");
+                return List.<SearchHit>of();
+            }
 
-        // Batch-fetch page info (N+1 fix)
-        List<Long> topIds = fused.stream().limit(topK).map(ri -> ri.pageId).toList();
-        if (topIds.isEmpty()) {
-            metrics.recordRetrieval(mode.name().toLowerCase(),
-                    Duration.ofNanos(System.nanoTime() - startNanos), 0);
+            try {
+                HybridStoreProvider.RetrievalResult result =
+                        esService.search(workspaceId, query, topK * 3);
+                if (result.success()) {
+                    esCircuitBreaker.recordSuccess();
+                    return convertEsHits(result);
+                } else {
+                    esCircuitBreaker.recordFailure();
+                    return List.<SearchHit>of();
+                }
+            } catch (Exception e) {
+                esCircuitBreaker.recordFailure();
+                log.error("[HybridRetriever] ES search failed: {}", e.getMessage());
+                return List.<SearchHit>of();
+            }
+        }).exceptionally(ex -> {
+            esCircuitBreaker.recordFailure();
             return List.of();
+        });
+
+        CompletableFuture<List<SearchHit>> vectorFuture = CompletableFuture.supplyAsync(() -> {
+            if (mode == RetrievalMode.ES_ONLY) return List.of();
+
+            if (milvusCircuitBreaker.shouldFallback()) {
+                log.warn("[HybridRetriever] Milvus circuit breaker OPEN, using MySQL vector fallback");
+                return executeMysqlVectorSearch(workspaceId, query, topK * 3);
+            }
+
+            try {
+                HybridStoreProvider.RetrievalResult result =
+                        milvusService.retrieve(workspaceId, query, topK * 3);
+                if (result.success()) {
+                    milvusCircuitBreaker.recordSuccess();
+                    return convertVectorHits(result);
+                } else {
+                    milvusCircuitBreaker.recordFailure();
+                    log.warn("[HybridRetriever] Milvus failed, using MySQL vector fallback");
+                    return executeMysqlVectorSearch(workspaceId, query, topK * 3);
+                }
+            } catch (Exception e) {
+                milvusCircuitBreaker.recordFailure();
+                log.warn("[HybridRetriever] Milvus error, using MySQL vector fallback: {}", e.getMessage());
+                return executeMysqlVectorSearch(workspaceId, query, topK * 3);
+            }
+        }).exceptionally(ex -> {
+            milvusCircuitBreaker.recordFailure();
+            return executeMysqlVectorSearch(workspaceId, query, topK * 3);
+        });
+
+        try {
+            CompletableFuture.allOf(esFuture, vectorFuture)
+                    .get(SEARCH_TIMEOUT_SECONDS, TimeUnit.SECONDS);
+            esHits = esFuture.get();
+            vectorHits = vectorFuture.get();
+        } catch (Exception e) {
+            log.error("[HybridRetriever] Timeout or error: {}", e.getMessage());
         }
 
-        Map<Long, WikiPageLite> liteMap = pageMapper.selectBatchLite(topIds)
-            .stream().collect(Collectors.toMap(WikiPageLite::id, p -> p));
+        // 检查是否使用了 MySQL 向量降级
+        fallbackUsed = vectorHits.stream()
+                .anyMatch(h -> "MYSQL_VECTOR".equals(h.source()))
+                || vectorHits.stream().anyMatch(h -> "FALLBACK".equals(h.source()));
 
-        // Build result with snippets
-        List<PageSearchResult> results = new ArrayList<>();
-        for (RankedItem ri : fused.stream().limit(topK).toList()) {
-            WikiPageLite lite = liteMap.get(ri.pageId);
-            if (lite == null) continue;
-            // RFC-051 PR-2: hide system pages (overview / log) from search results.
-            if (lite.isSystem()) continue;
+        // 根据成功情况判断
+        esSuccess = !esHits.isEmpty() || mode == RetrievalMode.VECTOR_ONLY;
+        milvusSuccess = !vectorHits.isEmpty() || mode == RetrievalMode.ES_ONLY;
 
-            String snippet = null;
-            List<ImageRef> imageRefs = List.of();
-            if (!ri.matchedBy.contains("relation_boost")) {
-                String content = pageMapper.selectContentById(ri.pageId);
-                if (content != null) {
-                    snippet = SnippetExtractor.extract(content, query);
-                    // Surface up to N image references inline with the hit so the UI
-                    // can render thumbnails without re-fetching the page body.
-                    List<ImageRef> all = contentNormalizer.extractImageRefs(content);
-                    imageRefs = all.size() > MAX_IMAGE_REFS_PER_HIT
-                            ? all.subList(0, MAX_IMAGE_REFS_PER_HIT)
-                            : all;
+        // 两者都失败 → 全量降级到 MySQL
+        if (!esSuccess && !milvusSuccess) {
+            hybridCircuitBreaker.recordFailure();
+            log.warn("[HybridRetriever] Both engines failed, using full fallback");
+            List<SearchHit> fallbackHits = executeFullFallback(workspaceId, query, topK);
+            return new HybridResult(fallbackHits, 0, 0, true);
+        }
+
+        // 至少一路成功 → 重置 Hybrid 熔断器
+        if (esSuccess || milvusSuccess) {
+            hybridCircuitBreaker.recordSuccess();
+        }
+
+        List<SearchHit> mergedHits = switch (mode) {
+            case ES_ONLY -> esHits;
+            case VECTOR_ONLY -> vectorHits;
+            case HYBRID -> mergeAndRerank(esHits, vectorHits, topK);
+        };
+
+        return new HybridResult(mergedHits, esHits.size(), vectorHits.size(), fallbackUsed);
+    }
+
+    /**
+     * 执行混合检索并记录 Chunk 召回。
+     * <p>
+     * 在检索成功后，遍历结果中包含 {@code chunkId} 元数据的命中，
+     * 调用 {@link MemoryRecallService#recordChunkRecall} 记录精准的 Chunk 级别召回频率。
+     *
+     * @param workspaceId 工作空间 ID
+     * @param agentId     Agent ID（用于记忆召回追踪，null 则跳过记录）
+     * @param query       查询文本
+     * @param topK        返回结果数
+     * @param mode        检索模式
+     * @return 混合检索结果
+     */
+    public HybridResult retrieveAndRecord(Long workspaceId, Long agentId, String query,
+                                           int topK, RetrievalMode mode) {
+        HybridResult result = retrieve(workspaceId, query, topK, mode);
+
+        if (agentId != null && result.hits() != null && !result.hits().isEmpty()) {
+            String queryHash = generateQueryHash(query);
+            for (SearchHit hit : result.hits()) {
+                if (hit.metadata() != null && hit.metadata().containsKey("chunkId")) {
+                    try {
+                        Long chunkId = Long.parseLong(String.valueOf(hit.metadata().get("chunkId")));
+                        Long pageId = hit.metadata().containsKey("pageId")
+                                ? Long.parseLong(String.valueOf(hit.metadata().get("pageId")))
+                                : null;
+                        String filename = hit.metadata().containsKey("filename")
+                                ? String.valueOf(hit.metadata().get("filename"))
+                                : null;
+
+                        memoryRecallService.recordChunkRecall(
+                                agentId, chunkId, hit.content(), queryHash, pageId, filename);
+                    } catch (NumberFormatException e) {
+                        log.debug("[HybridRetriever] Cannot parse chunkId from metadata: {}",
+                                hit.metadata().get("chunkId"));
+                    }
                 }
             }
-
-            String reason = buildReason(lite, ri.matchedBy, query);
-            // RFC-051 §9.4: when the entry came from relation boost, override / append
-            // the reason with the seed slug + dominant signals so callers can explain
-            // why an out-of-search-corpus page surfaced.
-            if (ri.relationReason() != null && !ri.relationReason().isBlank()) {
-                reason = (reason == null || reason.isBlank())
-                        ? ri.relationReason()
-                        : reason + " · " + ri.relationReason();
-            }
-            results.add(new PageSearchResult(
-                lite.slug(), lite.title(), lite.summary(),
-                snippet != null ? snippet : lite.summary(),
-                ri.matchedBy, reason, ri.score, imageRefs));
         }
-        metrics.recordRetrieval(mode.name().toLowerCase(),
-                Duration.ofNanos(System.nanoTime() - startNanos), results.size());
-        return results;
+
+        return result;
     }
 
     /**
-     * Legacy searchPages — returns PageHit for backward compatibility.
+     * 生成查询文本的简短哈希（用于召回多样性计算）。
      */
-    public List<PageHit> searchPages(Long kbId, String query, String modeStr, int topK) {
-        return search(kbId, query, modeStr, topK).stream()
-            .map(r -> new PageHit(null, r.slug(), r.title(), r.summary(), r.score()))
-            .toList();
+
+    private List<SearchHit> convertEsHits(HybridStoreProvider.RetrievalResult result) {
+        return result.hits().stream()
+                .map(hit -> new SearchHit(
+                        "es:" + hit.id(),
+                        hit.metadata() != null ? String.valueOf(hit.metadata().getOrDefault("title", "")) : null,
+                        hit.content(),
+                        hit.score(),
+                        "ES",
+                        hit.metadata()))
+                .collect(Collectors.toList());
     }
 
+    // ---- 向量结果转换（Milvus + MySQL 向量） ----
+
+    private List<SearchHit> convertVectorHits(HybridStoreProvider.RetrievalResult result) {
+        return result.hits().stream()
+                .map(hit -> new SearchHit(
+                        "vector:" + hit.id(),
+                        hit.metadata() != null ? String.valueOf(hit.metadata().getOrDefault("pageTitle", "")) : null,
+                        hit.content(),
+                        hit.score(),
+                        result.fallbackUsed() ? "MYSQL_VECTOR" : "VECTOR",
+                        hit.metadata()))
+                .collect(Collectors.toList());
+    }
+
+    // ---- MySQL 向量降级 ----
+
+    private List<SearchHit> executeMysqlVectorSearch(Long workspaceId, String query, int topK) {
+        try {
+            var result = fallbackProvider.retrieveAsync(workspaceId, query, topK).get();
+            return result.hits().stream()
+                    .map(hit -> new SearchHit(
+                            "mysql-vector:" + hit.id(),
+                            null,
+                            hit.content(),
+                            hit.score(),
+                            "MYSQL_VECTOR",
+                            hit.metadata()))
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("[HybridRetriever] MySQL vector search failed: {}", e.getMessage());
+            return List.of();
+        }
+    }
+
+    // ---- 全量降级（ES + Milvus 双失败） ----
+
+    private List<SearchHit> executeFullFallback(Long workspaceId, String query, int topK) {
+        try {
+            var result = fallbackProvider.retrieveAsync(workspaceId, query, topK).get();
+            return result.hits().stream()
+                    .map(hit -> new SearchHit(
+                            "fallback:" + hit.id(),
+                            null,
+                            hit.content(),
+                            hit.score(),
+                            "FALLBACK",
+                            hit.metadata()))
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("[HybridRetriever] Full fallback failed: {}", e.getMessage());
+            return List.of();
+        }
+    }
+
+    // ---- RRF 融合排序 ----
+
     /**
-     * Chunk-level semantic search.
+     * RRF (Reciprocal Rank Fusion) 融合算法。
+     * score = Σ 1/(k + rank_i)
+     *
+     * @param esHits     ES 检索结果
+     * @param vectorHits 向量检索结果
+     * @param topK       最终返回数
+     * @return 融合排序后的结果
      */
-    public List<ChunkHit> searchChunks(Long kbId, String query, int topK) {
-        if (!embeddingService.isAvailable()) return List.of();
+    private List<SearchHit> mergeAndRerank(List<SearchHit> esHits,
+                                            List<SearchHit> vectorHits, int topK) {
+        Map<String, Double> fusedScores = new LinkedHashMap<>();
+        Map<String, SearchHit> hitMap = new LinkedHashMap<>();
 
-        float[] queryVec = embeddingService.embedQuery(kbId, query);
-        if (queryVec == null) return List.of();
+        // ES 结果排名
+        for (int i = 0; i < esHits.size(); i++) {
+            SearchHit hit = esHits.get(i);
+            String key = generateDedupKey(hit);
+            fusedScores.merge(key, 1.0 / (RRF_K + i + 1), Double::sum);
+            hitMap.putIfAbsent(key, hit);
+        }
 
-        List<WikiChunkEntity> allChunks = chunkService.listByKbId(kbId);
+        // 向量结果排名（包含 MySQL 向量）
+        for (int i = 0; i < vectorHits.size(); i++) {
+            SearchHit hit = vectorHits.get(i);
+            String key = generateDedupKey(hit);
+            fusedScores.merge(key, 1.0 / (RRF_K + i + 1), Double::sum);
+            hitMap.putIfAbsent(key, hit);
+        }
 
-        return allChunks.stream()
-                .filter(c -> c.getEmbedding() != null)
-                .map(c -> {
-                    float[] chunkVec = WikiEmbeddingService.bytesToFloats(c.getEmbedding());
-                    float score = WikiEmbeddingService.cosine(queryVec, chunkVec);
-                    String snippet = c.getContent().length() > 300
-                            ? c.getContent().substring(0, 300) + "..."
-                            : c.getContent();
-                    return new ChunkHit(c.getId(), c.getRawId(), snippet, score,
-                            c.getPageNumber(), c.getHeaderBreadcrumb());
-                })
-                .sorted(Comparator.comparingDouble(ChunkHit::score).reversed())
+        // 重新构建结果
+        return fusedScores.entrySet().stream()
+                .sorted(Map.Entry.<String, Double>comparingByValue().reversed())
                 .limit(topK)
-                .toList();
-    }
-
-    // ==================== Internal methods ====================
-
-    /** Semantic search: chunk cosine → aggregate to page level, then merged
-     *  with direct page-level cosine when a page has its own embedding.
-     *  The page-level signal covers synthesis pages whose vocabulary doesn't
-     *  appear in any source raw's chunks. */
-    private List<RankedItem> semanticSearch(Long kbId, String query, int limit) {
-        float[] queryVec = embeddingService.embedQuery(kbId, query);
-        if (queryVec == null) return List.of();
-
-        List<WikiChunkEntity> allChunks = chunkService.listByKbId(kbId);
-
-        Map<Long, Float> chunkScores = new HashMap<>();
-        for (WikiChunkEntity chunk : allChunks) {
-            if (chunk.getEmbedding() == null || chunk.getRawId() == null) continue;
-            float[] vec = WikiEmbeddingService.bytesToFloats(chunk.getEmbedding());
-            float score = WikiEmbeddingService.cosine(queryVec, vec);
-            chunkScores.merge(chunk.getRawId(), score, Math::max);
-        }
-
-        List<WikiPageEntity> allPages = pageService.listByKbId(kbId);
-        Map<Long, Double> pageScores = new HashMap<>();
-        for (WikiPageEntity page : allPages) {
-            // Direct page-level signal: the page carries its own embedding
-            // (typical for transformation synthesis pages).
-            if (page.getEmbedding() != null) {
-                float[] pageVec = WikiEmbeddingService.bytesToFloats(page.getEmbedding());
-                float pageScore = WikiEmbeddingService.cosine(queryVec, pageVec);
-                pageScores.merge(page.getId(), (double) pageScore, Math::max);
-            }
-            // Transitive signal: chunks of any source raw this page references.
-            String rawIds = page.getSourceRawIds();
-            if (rawIds == null) continue;
-            for (String rawIdStr : rawIds.replaceAll("[\\[\\]\\s]", "").split(",")) {
-                try {
-                    long rawId = Long.parseLong(rawIdStr.trim());
-                    Float score = chunkScores.get(rawId);
-                    if (score != null) {
-                        pageScores.merge(page.getId(), (double) score, Math::max);
-                    }
-                } catch (NumberFormatException ignored) {}
-            }
-        }
-
-        return pageScores.entrySet().stream()
-                .sorted(Map.Entry.<Long, Double>comparingByValue().reversed())
-                .limit(limit)
-                .map(e -> new RankedItem(e.getKey(), e.getValue(), List.of("semantic")))
-                .toList();
+                .map(entry -> {
+                    SearchHit original = hitMap.get(entry.getKey());
+                    return new SearchHit(
+                            original.id(),
+                            original.title(),
+                            original.content(),
+                            entry.getValue().floatValue(),
+                            "HYBRID",
+                            original.metadata());
+                })
+                .collect(Collectors.toList());
     }
 
     /**
-     * RFC-032: Two-phase keyword search — fast path (title+summary) first,
-     * full content search only if needed to fill topK.
+     * 生成去重键：基于 content 前 100 字符的 hashCode。
      */
-    private List<RankedItem> keywordSearch(Long kbId, String query, int limit) {
-        String kw = "%" + query.toLowerCase()
-                .replace("\\", "\\\\")
-                .replace("%", "\\%")
-                .replace("_", "\\_") + "%";
-
-        // Phase 1: fast path (title + summary only)
-        List<Long> fastIds = pageMapper.searchFastIds(kbId, kw, limit);
-
-        List<RankedItem> ranked = new ArrayList<>();
-        for (int i = 0; i < fastIds.size(); i++) {
-            ranked.add(new RankedItem(fastIds.get(i), 1.0 / (i + 1), List.of("title")));
-        }
-
-        if (fastIds.size() >= limit) return ranked;
-
-        // Phase 2: full content search (supplement)
-        List<Long> contentIds = pageMapper.searchContentIds(kbId, kw, fastIds, limit - fastIds.size());
-        for (int i = 0; i < contentIds.size(); i++) {
-            ranked.add(new RankedItem(contentIds.get(i),
-                    1.0 / (fastIds.size() + i + 1), List.of("content")));
-        }
-
-        return ranked;
-    }
-
-    /** RRF fusion: score = Σ 1/(k + rank_i) */
-    private List<RankedItem> rrfFuse(List<RankedItem> a, List<RankedItem> b, int k) {
-        Map<Long, Double> fused = new HashMap<>();
-        Map<Long, List<String>> matchedByMap = new HashMap<>();
-
-        for (int i = 0; i < a.size(); i++) {
-            fused.merge(a.get(i).pageId, 1.0 / (k + i + 1), Double::sum);
-            matchedByMap.computeIfAbsent(a.get(i).pageId, x -> new ArrayList<>()).addAll(a.get(i).matchedBy);
-        }
-        for (int i = 0; i < b.size(); i++) {
-            fused.merge(b.get(i).pageId, 1.0 / (k + i + 1), Double::sum);
-            matchedByMap.computeIfAbsent(b.get(i).pageId, x -> new ArrayList<>()).addAll(b.get(i).matchedBy);
-        }
-
-        return fused.entrySet().stream()
-                .sorted(Map.Entry.<Long, Double>comparingByValue().reversed())
-                .map(e -> new RankedItem(e.getKey(), e.getValue(),
-                        matchedByMap.getOrDefault(e.getKey(), List.of()).stream().distinct().toList()))
-                .toList();
+    private String generateDedupKey(SearchHit hit) {
+        String content = hit.content() != null ? hit.content() : "";
+        String trimmed = content.length() > 100 ? content.substring(0, 100) : content;
+        return String.valueOf(trimmed.hashCode());
     }
 
     /**
-     * RFC-032: 1-hop relation boost on top-3 seed pages.
-     * <p>
-     * RFC-051 §9.4 makes the boost magnitude data-driven instead of a flat
-     * constant when {@code mate.wiki.use-normalized-relation-boost} is on.
+     * 生成查询哈希。
      */
-    private List<RankedItem> applyRelationBoost(List<RankedItem> hits, Long kbId, int topK) {
-        if (relationService == null || hits.isEmpty()) return hits;
-
-        List<Long> seedIds = hits.stream().limit(3).map(h -> h.pageId).toList();
-        // Per-candidate aggregate raw score (sum of contributions from each seed-relation
-        // pair) plus a remembered "best" reason — the seed that contributed the highest
-        // relation score and its dominant signals. Used for the human-readable reason
-        // surfaced via PageSearchResult.reason.
-        Map<Long, Double> rawScoreMap = new HashMap<>();
-        Map<Long, RelationReasonRecord> reasonMap = new HashMap<>();
-
-        for (Long seedId : seedIds) {
-            List<WikiPageLite> seedLites = pageMapper.selectBatchLite(List.of(seedId));
-            if (seedLites.isEmpty()) continue;
-            WikiPageLite seed = seedLites.get(0);
-            // RFC-051 PR-5: don't expand 1-hop neighborhood from a system page seed.
-            // Otherwise the overview / log neighborhood — typically every page that
-            // shares a raw with them — leaks into search results via boost. PR-2's
-            // result-emit filter drops the system pages themselves; this guard ensures
-            // we don't even use them as expansion roots.
-            if (seed.isSystem()) continue;
-            try {
-                relationService.relatedPages(kbId, seed.slug(), 3)
-                    .forEach(r -> {
-                        WikiPageEntity relPage = pageService.getBySlug(kbId, r.slug());
-                        if (relPage == null) return;
-                        rawScoreMap.merge(relPage.getId(), r.score(), Double::sum);
-                        // Keep the strongest single seed→neighbor pair as the reason.
-                        RelationReasonRecord existing = reasonMap.get(relPage.getId());
-                        if (existing == null || r.score() > existing.contribution) {
-                            reasonMap.put(relPage.getId(),
-                                new RelationReasonRecord(seed.slug(), r.signals(), r.score()));
-                        }
-                    });
-            } catch (Exception e) {
-                log.debug("[HybridRetriever] Relation boost failed for seed {}: {}", seed.slug(), e.getMessage());
-            }
-        }
-
-        Set<Long> existingIds = hits.stream().map(h -> h.pageId).collect(Collectors.toSet());
-        rawScoreMap.keySet().removeAll(existingIds);
-
-        if (rawScoreMap.isEmpty()) return hits;
-
-        // Choose boost magnitude per candidate: legacy flat constant or normalized × λ.
-        Map<Long, Double> boostMap = new HashMap<>();
-        if (properties != null && properties.isUseNormalizedRelationBoost()) {
-            double maxRaw = rawScoreMap.values().stream().mapToDouble(Double::doubleValue).max().orElse(0.0);
-            double lambda = Math.max(0, properties.getRelationBoostLambda());
-            if (maxRaw <= 0 || lambda <= 0) {
-                rawScoreMap.forEach((pid, raw) -> boostMap.put(pid, 0.0));
-            } else {
-                final double maxRawF = maxRaw;
-                rawScoreMap.forEach((pid, raw) -> boostMap.put(pid, (raw / maxRawF) * lambda));
-            }
-        } else {
-            rawScoreMap.forEach((pid, raw) -> boostMap.put(pid, RELATION_BOOST));
-        }
-
-        List<RankedItem> expanded = new ArrayList<>(hits);
-        boostMap.forEach((pid, score) -> {
-            RelationReasonRecord rr = reasonMap.get(pid);
-            String reason = rr == null ? null : formatRelationReason(rr);
-            expanded.add(new RankedItem(pid, score, List.of("relation_boost"), reason));
-        });
-        return expanded;
+    private String generateQueryHash(String query) {
+        if (query == null) return "";
+        return Integer.toHexString(query.hashCode());
     }
 
-    private String buildReason(WikiPageLite lite, List<String> matchedBy, String query) {
-        if (matchedBy.contains("relation_boost")) return "Structurally related to top search results";
-        if (matchedBy.contains("title") && matchedBy.contains("semantic")) return "Title and semantic match";
-        if (matchedBy.contains("title")) return "Title match";
-        if (matchedBy.contains("semantic")) return "Semantic similarity";
-        if (matchedBy.contains("content")) return "Content match";
-        return "Keyword match";
-    }
+    // ---- 数据记录类型 ----
 
-    private Mode parseMode(String mode) {
-        if (mode == null || mode.isBlank()) {
-            String defaultMode = properties.getSearchDefaultMode();
-            return switch (defaultMode) {
-                case "keyword" -> Mode.KEYWORD;
-                case "semantic" -> Mode.SEMANTIC;
-                default -> Mode.HYBRID;
-            };
-        }
-        return switch (mode.toLowerCase()) {
-            case "keyword" -> Mode.KEYWORD;
-            case "semantic" -> Mode.SEMANTIC;
-            default -> Mode.HYBRID;
-        };
+    /**
+     * 单条检索命中结果。
+     */
+    public record SearchHit(
+            String id,
+            String title,
+            String content,
+            float score,
+            String source,     // "ES" / "VECTOR" / "MYSQL_VECTOR" / "FALLBACK" / "HYBRID"
+            Map<String, Object> metadata) {
     }
 
     /**
-     * RFC-051 §9.4: optional human-readable explanation for relation boost
-     * entries. {@code null} when this RankedItem wasn't produced by the
-     * relation pass.
+     * 混合检索结果。
      */
-    private record RankedItem(Long pageId, double score, List<String> matchedBy, String relationReason) {
-        /** Back-compat ctor — keyword/semantic items don't carry a relation reason. */
-        RankedItem(Long pageId, double score, List<String> matchedBy) {
-            this(pageId, score, matchedBy, null);
-        }
-    }
-
-    /** Internal: which seed/signals contributed the strongest relation pull to a candidate. */
-    private record RelationReasonRecord(String seedSlug, List<String> signals, double contribution) {}
-
-    private static String formatRelationReason(RelationReasonRecord r) {
-        if (r == null) return null;
-        StringBuilder sb = new StringBuilder("related to '").append(r.seedSlug()).append("'");
-        if (r.signals() != null && !r.signals().isEmpty()) {
-            sb.append(" via ").append(String.join("+", r.signals()));
-        }
-        return sb.toString();
+    public record HybridResult(
+            List<SearchHit> hits,
+            int esHitCount,
+            int vectorHitCount,
+            boolean vectorFallbackUsed) {
     }
 }
